--- a/styles/style.css
+++ b/styles/style.css
@@ -108,18 +108,18 @@
   line-height: 30px;
   font-weight: 400;
   margin: 0;
-  padding: 0 0 68px;
   color: #ffffff;
 }
 
 .staff__cards {
   max-width: 760px;
-  margin: auto;
+  margin: 68px auto 0;
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
   padding-left: 0;
   list-style-type: none;
+  justify-content: center;
 }
 
 .card {
@@ -135,8 +135,8 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .card__title {
@@ -153,7 +153,8 @@
 }
 
 .card__footer {
-  margin-bottom: 0;
+  margin: 0;
+  margin-top: auto;
   font-size: 14px;
   line-height: 20px;
   color: #838383;
