--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-* {
-  color: #000000;
-}
-
 .page {
   max-width: 1600px;
   min-width: 1100px;
@@ -301,4 +297,107 @@
   text-align: center;
   font-size: 14px;
   margin: 0;
+}
+/* SPRINT 3.3 */
+.membership {
+  padding: 100px 0 140px;
+  background-color: #057bf2;
+  color: #ffffff;
+}
+
+.membership__title {
+  max-width: 574px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+}
+
+.membership__steps {
+  list-style-type: none;
+  padding: 0;
+  margin: 100px 0 0;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  border: 1px #0000;
+}
+
+.step {
+  flex-basis: 220px;
+}
+
+.step__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.step__icon {
+  margin-left: 20px;
+}
+
+.step__description {
+  margin: 10px 0 0;
+}
+
+.footer {
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  padding: 60px 80px;
+}
+
+.footer__columns {
+  display: flex;
+  align-items: center;
+}
+
+.footer__column_content_hours {
+  margin: 0 80px 0 auto;
+}
+
+.footer__column_content_social {
+}
+
+.footer__logo {
+  width: 58px;
+  height: 80px;
+}
+
+.footer__column-heading {
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.footer__list-item {
+  color: #ffffff;
+  margin-top: 16px;
+}
+
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
+
+.footer__copyright {
+  color: #ffffff;
+  margin: 100px 0 0;
 }
