--- a/styles/style.css
+++ b/styles/style.css
@@ -349,6 +349,7 @@
   box-sizing: border-box;
   background-color: #1f1f1f;
   padding: 60px 80px;
+  color: #ffffff;
 }
 
 .footer__columns {
@@ -357,10 +358,11 @@
 }
 
 .footer__column_content_hours {
-  margin: 0 80px 0 auto;
+  margin: 0 0 0 auto;
 }
 
 .footer__column_content_social {
+  margin-left: 80px;
 }
 
 .footer__logo {
@@ -376,7 +378,7 @@
 .footer__list {
   list-style-type: none;
   padding: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .footer__list-item {
@@ -389,12 +391,13 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  column-gap: 10px;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  padding-right: 10px;
+  /* padding-right: 10px; */
 }
 
 .footer__copyright {
