--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,7 @@
 }
 
 .staff {
-  background-image: url(/images/staff_picks_background.jpg);
+  background-image: url(./../images/staff_picks_background.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
